<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SenderForm">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_110dp"
        android:text="@string/sender_detail"
        android:padding="@dimen/_10dp"
        android:background="@drawable/rounded_background"
        android:textColor="@color/white"
        android:fontFamily="monospace"
        android:textSize="@dimen/_34sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_16dp"
        android:gravity="center_horizontal"
        android:background="@color/background"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0">

        <EditText
            android:id="@+id/etsemail"
            android:layout_width="@dimen/edittext"
            android:layout_height="wrap_content"
            android:hint="@string/sender_detail_email"
            android:layout_marginTop="@dimen/_16dp"
            android:padding="@dimen/_16dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/edittextrounded"/>

        <EditText
            android:id="@+id/etsfullname"
            android:layout_width="@dimen/edittext"
            android:layout_height="wrap_content"
            android:hint="@string/sender_detail_fullname"
            android:layout_marginTop="@dimen/_16dp"
            android:padding="@dimen/_16dp"
            android:inputType="text"
            android:background="@drawable/edittextrounded"/>

        <EditText
            android:id="@+id/etscontact"
            android:layout_width="@dimen/edittext"
            android:layout_height="wrap_content"
            android:hint="@string/sender_detail_contact_information"
            android:layout_marginTop="@dimen/_16dp"
            android:padding="@dimen/_16dp"
            android:inputType="phone"
            android:background="@drawable/edittextrounded"/>

        <EditText
            android:id="@+id/etscountry"
            android:layout_width="@dimen/edittext"
            android:layout_height="wrap_content"
            android:hint="@string/sender_detail_country"
            android:layout_marginTop="@dimen/_16dp"
            android:padding="@dimen/_16dp"
            android:inputType="text"
            android:background="@drawable/edittextrounded"/>

        <EditText
            android:id="@+id/etsaddress"
            android:layout_width="@dimen/edittext"
            android:layout_height="wrap_content"
            android:hint="@string/sender_detail_address"
            android:layout_marginTop="@dimen/_16dp"
            android:padding="@dimen/_16dp"
            android:inputType="text"
            android:background="@drawable/edittextrounded"/>

        <Button
            android:id="@+id/btnnext"
            android:layout_width="@dimen/_269dp"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:background="@drawable/edittextrounded"
            android:textColor="@color/white"
            android:backgroundTint="@color/red"
            android:textStyle="bold"
            android:fontFamily="monospace"
            android:layout_marginTop="@dimen/_24dp"
            android:textSize="@dimen/_20sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
